add missing data of Jazz musicians/roadNet-CA

--- a/main.tex
+++ b/main.tex
@@ -1654,7 +1654,7 @@ This result demonstrates the scalability of \text{ApproxAGCM} when applied to la
             \cmidrule{3-5}
                                             & (\(s\)) & \(0.3\) & \(0.25\) & \(0.2\)\cr
             \midrule
-            Jazz musicians                  & --      & 0.157   & 0.178    & 0.194\cr
+            Jazz musicians                  & 0.214   & 0.157   & 0.178    & 0.194\cr
             Euroroads                       & 0.498   & 0.239   & 0.277    & 0.281\cr
             Hamster friends                 & 1.183   & 0.348   & 0.450    & 0.629\cr
             Hamster full                    & 1.267   & 0.402   & 0.525    & 1.049\cr
@@ -1676,9 +1676,9 @@ This result demonstrates the scalability of \text{ApproxAGCM} when applied to la
             com-DBLP*                       & --      & 232.7   & 399.1    & 756.8\cr
             Amazon*                         & --      & 349.5   & 652.3    & 1082\cr
             roadNet-PA*                     & --      & 2215    & 3349     & 5714\cr
-            YouTube*                        & --      & --      & --       & --\cr
+            YouTube*                        & --      & 1482    & 2197     & 3661\cr
             roadNet-TX*                     & --      & 3135    & 4464     & 9338\cr
-            roadNet-CA*                     & --      & --      & --       & --\cr
+            roadNet-CA*                     & --      & 5445    & 8214     & 14458\cr
             \bottomrule
         \end{tabularx}
     \end{threeparttable}
